--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@ibraheem4/linear-mcp",
-  "version": "78.1.0",
+  "name": "@gmclend/linear-mcp",
+  "version": "80.0.0",
   "description": "An enhanced Linear MCP server providing comprehensive tools for interacting with Linear's API",
   "type": "module",
   "bin": {
-    "@ibraheem4/linear-mcp": "./build/index.js",
+    "@gmclend/linear-mcp": "./build/index.js",
     "linear-mcp": "./build/index.js",
     "linear-mcp-cli": "./build/cli.js"
   },
@@ -46,11 +46,11 @@
     "windsurf",
     "claude"
   ],
-  "author": "Ibraheem Abdul-Malik",
+  "author": "Grant McLendon",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ibraheem4/linear-mcp"
+    "url": "https://github.com/gerbal/linear-mcp"
   },
   "publishConfig": {
     "access": "public"
